@@ -1,3 +1,9 @@
+2006-07-18 Bart Hakvoort <hakvoort@cvs.gnome.org>
+
+	* include/GParted_Core.h,
+	  src/GParted_Core.cc: worked a bit on progressfeedback..
+	* include/Partition.h: added FIXME
+	
 2006-07-17 Bart Hakvoort <hakvoort@cvs.gnome.org>
 
 	* src/Win_GParted.cc,
